--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
 				<li> Balcony</li>
 				<li> Optional Simple Beds</li>
 			</ol>
-			<div>
-				<a href="https://www.airbnb.fr/rooms/6436194?check_in=2021-10-15&check_out=2021-10-22&translate_ugc=false&federated_search_id=5f68df06-7395-4a7f-8558-a5dcfdcaeab5&source_impression_id=p3_1633598534_xwMuQPY7i3ArBXDX&guests=1&adults=1" target="_blank"><strong>Book Here</strong></a>
-			</div>
+			<div data-tf-widget="xRhoj8DN" style="width:100%;height:400px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
 	</div>
 </body>
 </html>
